--- a/frontend/src/locales/en/dashboard.json
+++ b/frontend/src/locales/en/dashboard.json
@@ -1,4 +1,13 @@
 {
+  "common": {
+    "cluster": "Cluster",
+    "node": "Node",
+    "service": "Service",
+    "lastUpdate": "Last Update"
+  },
+  "messages": {
+    "noMetricsAvailable": "No metrics available"
+  },
   "dashboard": {
     "title": "System Dashboard",
     "overview": {
@@ -23,20 +32,40 @@
         "title": "CPU Usage",
         "total": "Total CPU",
         "used": "Used CPU",
-        "available": "Available CPU"
+        "available": "Available CPU",
+        "free": "Free CPU"
       },
       "memory": {
         "title": "Memory Usage",
         "total": "Total Memory",
         "used": "Used Memory",
-        "available": "Available Memory"
+        "available": "Available Memory",
+        "free": "Free Memory"
       },
       "storage": {
         "title": "Storage Usage",
         "total": "Total Storage",
         "used": "Used Storage",
-        "available": "Available Storage"
-      }
+        "available": "Available Storage",
+        "free": "Free Storage"
+      },
+      "network": {
+        "receive": "Receive",
+        "transmit": "Transmit"
+      },
+      "disk": {
+        "title": "Disk Usage",
+        "total": "Total Disk",
+        "used": "Used Disk",
+        "available": "Available Disk",
+        "free": "Free Disk"
+      },
+      "networkUsage": "Network Usage",
+      "memoryUsage": "Memory Usage",
+      "cpuUsage": "CPU Usage",
+      "storageUsage": "Storage Usage",
+      "used": "Used",
+      "free": "Free"
     },
     "health": {
       "title": "Component Health",
@@ -46,6 +75,16 @@
         "error": "Error",
         "unknown": "Unknown"
       }
-    }
+    },
+    "podsSelected": "Pods Selected",
+    "podNamespaceDistribution": "Pod Namespace Distribution",
+    "namespace": "Namespace",
+    "allNamespaces": "All Namespaces",
+    "searchPods": "Search Pods",
+    "podStatusDistribution": "Pod Status Distribution",
+    "restarts": "Restarts",
+    "podName": "Pod Name",
+    "status": "Status",
+    "age": "Age"
   }
 } 
