--- a/frontend/src/locales/zh-TW/common.json
+++ b/frontend/src/locales/zh-TW/common.json
@@ -62,6 +62,14 @@
       "error": "錯誤",
       "warning": "警告",
       "info": "提示"
+    },
+    "sideMenu": {
+      "podManagement": "容器組管理",  
+      "dashboard": "儀表板",
+      "podDashboard": "容器組儀表板",
+      "imageManagement": "映像檔管理",
+      "logs": "日誌",
+      "profile": "個人資料" 
     }
   }
 } 
