complete the pod configuration upload and modification
read zipped template file, the zip file include the template yaml and files for helm chart deplyment.
enable filed entry and default values parser feature

--- a/frontend/src/locales/en/common.json
+++ b/frontend/src/locales/en/common.json
@@ -19,7 +19,8 @@
     "refresh": "Refresh",
     "lastUpdate": "Last Update",
     "next": "Next",
-    "back": "Back"
+    "back": "Back",
+    "deploy": "Deploy"
   },
   "errors": {
     "generalError": "An error occurred",
