--- a/frontend/src/locales/zh-TW/common.json
+++ b/frontend/src/locales/zh-TW/common.json
@@ -19,7 +19,8 @@
     "refresh": "重新整理",
     "lastUpdate": "最後更新",
     "next": "下一步",
-    "back": "返回"
+    "back": "返回",
+    "deploy": "部署"
   },
   "errors": {
     "generalError": "發生錯誤",
